@@ -4,6 +4,8 @@ Version 2.3 ->
  - added 'typeof' to reserved word list
  - added Java stacktrace to __str__() of JavaError, fixing half of PYLUCENE-1
  - fixed local string ref leaks in JArray<jstring>.get/toSequence (Aric Coady)
+ - added --libpath parameter to specify -Djava.library.path
+ - classes listed with --exclude are no longer loaded (except for dependencies)
  - 
 
 Version 2.2 -> 2.3
